# kSwitcher

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: Installation.cpp  Installation.h  KeyboardInterceptor.cpp  KeyboardInterceptor.h  NativeTrayIcon.cpp  NativeTrayIcon.h  Settings.cpp  Settings.h  TrayApplication.cpp  TrayApplication.h  kSwitcher.manifest  kSwitcher.rc  main.cpp  resource.h
